[ENG-7] add ApiErrorResponse to openapi spec
