# src/main/java/com/sky/movieratingservice/interfaces/restcontroller/ApiErrorResponseDto.java
@@ -1,7 +1,0 @@
-package com.sky.movieratingservice.interfaces.restcontroller;
-
-import lombok.Builder;
-
-@Builder
-public record ApiErrorResponseDto(String errorCode, String errorMessage) {
-}
